CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(git-git)

SET(CMAKE_C_FLAGS "-g -std=gnu99 -O2 -Wall -Wno-unused-function ${CMAKE_C_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS    "-lm ${CMAKE_EXE_LINKER_FLAGS}")
SET(CMAKE_MODULE_LINKER_FLAGS "-lm ${CMAKE_MODULE_LINKER_FLAGS}")
SET(CMAKE_SHARED_LINKER_FLAGS "-lm ${CMAKE_SHARED_LINKER_FLAGS}")

ADD_EXECUTABLE(git-git git-git.c)
